# wpoxy

./: .gitignore  Makefile.am  README.md  client.gpr  configure.ac  gnutls.gpr  libconfig.gpr  server.gpr  wpoxy.adp
src/: endpoints.adb  endpoints.ads  libconfig.adb  libconfig.ads  libconfig.templ  proxy_tasks.adb  proxy_tasks.ads  proxyc_coordinator.adb  proxyc_coordinator.ads  proxyd_coordinator.adb  proxyd_coordinator.ads  socks.adb  socks.ads  task_list.adb  task_list.ads  websocket.adb  websocket.ads  wpoxy_logger.adb  wpoxy_logger.ads  wpoxy_utils.adb  wpoxy_utils.ads  wpoxyc.adb  wpoxyd.adb
test/: test.bad.ca-crt.pem  test.bad.ca-key.pem  test.ca-crt.pem  test.ca-key.pem  test.server-crt.pem  test.server-key.pem  wpoxyc.conf  wpoxyd.conf  wpoxync.c
